syntax = "proto3";

package scala.meta.languageserver.index;

// All of the metadata associated with a single symbol definition
message SymbolData {
    reserved 4;
    string symbol = 1;
    // The Position where this symbol is defined.
    Position definition = 2;
    map<string, Ranges> references = 3;
    int32 kind = 7;
    int32 properties = 8;
    string name = 5;
    string signature = 6;
    // Planned for Scalameta v3.1 maybe
    // string docstring = 9; // javadoc/scaladoc
    // string overrides = 10; // parent symbol that this symbol overrides
}

// A standalone position used by "Go to definition" when jumping to a symbol
// definition.
message Position {
    // can be a local file, entry inside local zip file, http url, or anything
    // else.
    string uri = 1;
    Range range = 2;
}

// A hack to workaround the fact that protobuf can't
// encode `map<string, repeated string>`
message Ranges {
    repeated Range ranges = 1;
}

// A slim range position, the filename is embedded in the
// key of `references: map<string, ranges>`
message Range {
    int32 startLine = 1;
    int32 startColumn = 2;
    int32 endLine = 3;
    int32 endColumn = 4;
}